[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/drop-platform/platform.png" type="Texture" id=1]
[ext_resource path="res://drop_platform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 2 )

[node name="drop_platform" type="Node2D"]
script = ExtResource( 2 )

[node name="rigid_body_2d" type="RigidBody2D" parent="."]
collision_mask = 0
mode = 1
contacts_reported = 5
can_sleep = false

[node name="sprite" type="Sprite" parent="rigid_body_2d"]
texture = ExtResource( 1 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="rigid_body_2d"]
shape = SubResource( 1 )

[node name="area_2d" type="Area2D" parent="rigid_body_2d"]

[node name="collision_shape_2d" type="CollisionShape2D" parent="rigid_body_2d/area_2d"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="drop_timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="rigid_body_2d" to="." method="_on_rigid_body_2d_body_entered"]
[connection signal="body_entered" from="rigid_body_2d/area_2d" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="drop_timer" to="." method="_on_drop_timer_timeout"]
